--- a/composer.json
+++ b/composer.json
@@ -25,14 +25,16 @@
     "autoload": {
         "psr-4": {
             "App\\": "src",
-            "Elite\\": "./plugins/Elite/src"
+            "Elite\\": "./plugins/Elite/src",
+            "EndUsers\\": "./plugins/EndUsers/src"
         }
     },
     "autoload-dev": {
         "psr-4": {
             "App\\Test\\": "tests",
             "Cake\\Test\\": "./vendor/cakephp/cakephp/tests",
-            "Elite\\Test\\": "./plugins/Elite/tests"
+            "Elite\\Test\\": "./plugins/Elite/tests",
+            "EndUsers\\Test\\": "./plugins/EndUsers/tests"
         }
     },
     "scripts": {
